--- a/magda-content-api/tsconfig-build.json
+++ b/magda-content-api/tsconfig-build.json
@@ -1,6 +1,7 @@
 {
     "extends": "../tsconfig-global.json",
     "compilerOptions": {
+        "lib": ["es2017", "dom"],
         "declaration": true,
         "outDir": "dist",
         "baseUrl": "."
