--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -166,6 +166,7 @@ buildtest:ui:
     REACT_APP_SHA1: "$CI_COMMIT_SHA"
   script:
     - yarn install
+    - yarn run eslint
     - yarn run in-submodules -- -f categories.ui=true -- run build --include-filtered-dependencies
     - yarn run in-submodules -- -f categories.ui=true -- run test
   artifacts:
