Disable /auth route in prod & change health checker to /healthz

--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -25,6 +25,7 @@ gateway:
       memory: 100Mi
   autoscaler:
     enabled: false
+  enableAuthEndpoint: true
 combined-db:
   resources:
     requests:
