--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
 {{- if .Values.auth.googleClientId }}
             "--googleClientId", {{ .Values.auth.googleClientId | quote }},
 {{- end }}
+{{- if .Values.enableAuthEndpoint }}
+            "--enableAuthEndpoint", {{ .Values.enableAuthEndpoint | quote }},
+{{- end }}
             "--proxyRoutesPath", "/etc/routes/routes.json",
             "--web", "http://web",
             "--authorizationApi", "http://authorization-api/v0",
@@ -39,7 +42,7 @@ spec:
             mountPath: /etc/routes
         readinessProbe:
           httpGet:
-            path: /auth
+            path: /v0/healthz
             port: 80
           initialDelaySeconds: 10
           periodSeconds: 10
@@ -47,7 +50,7 @@ spec:
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           httpGet:
-            path: /auth
+            path: /v0/healthz
             port: 80
           initialDelaySeconds: 10
           periodSeconds: 10
