--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -13,6 +13,7 @@ global:
 web-server:
   cspReportUri: https://sdga.report-uri.com/r/d/csp/enforce
 gateway:
+  enableAuthEndpoint: true
   auth:
     facebookClientId: "173073926555600"
     googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
