Specifically turning off feedback-api.

--- a/deploy/helm/search-data-gov-au.yml
+++ b/deploy/helm/search-data-gov-au.yml
@@ -27,6 +27,8 @@ tags:
     correspondence-api: true
     ingress: true
 
+    feedback-api: false
+
 ingress:
   hostname: letest.search.data.gov.au
   ipName: search-data-gov-au-ingress
