--- a/magda-search-api/package.json
+++ b/magda-search-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/search-api",
-  "version": "0.0.43-RC1",
+  "version": "0.0.44-0",
   "description": "The search API.",
   "license": "Apache-2.0",
   "scripts": {
