--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -58,7 +58,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-root-slash-import": "^1.1.0",
     "browser-detect": "^0.2.22",
-    "chrono-node": "^1.3.5",
     "d3-collection": "^1.0.4",
     "deep-freeze": "0.0.1",
     "dompurify": "^1.0.2",
@@ -194,5 +193,8 @@
         "ui": true
       }
     }
+  },
+  "dependencies": {
+    "chrono-node": "^1.3.5"
   }
 }
