--- a/magda-preview-map/package.json
+++ b/magda-preview-map/package.json
@@ -67,9 +67,9 @@
     "svg-baker": "^1.2.17",
     "svg-baker-runtime": "^1.3.3",
     "svg-sprite-loader": "^3.4.0",
-    "terriajs": "5.7.0",
+    "terriajs": "^6.0.4",
     "terriajs-catalog-editor": "^0.2.0",
-    "terriajs-cesium": "1.41.1",
+    "terriajs-cesium": "1.41.2",
     "terriajs-schema": "latest",
     "urijs": "^1.18.12",
     "url-loader": "^0.5.7",
