--- a/magda-project-open-data-connector/package.json
+++ b/magda-project-open-data-connector/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@magda/registry-aspects": "^0.0.44-0",
     "@magda/typescript-common": "^0.0.44-0",
+    "jsonpath": "^0.2.11",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "request": "^2.79.0",
     "urijs": "^1.18.12",
