Made search.data.gov.au point at correct docker image and fixed ingress.

--- a/deploy/helm/search-data-gov-au.yml
+++ b/deploy/helm/search-data-gov-au.yml
@@ -4,7 +4,7 @@ global:
     externalUrl: https://search.data.gov.au
     image:
         pullPolicy: IfNotPresent
-        tag: "0.0.42-RC1"
+        tag: "0.0.43-RC1"
     enableLivenessProbes: true
 tags:
     all: false
@@ -28,7 +28,7 @@ tags:
     ingress: true
 
 ingress:
-  hostname: letest.search.data.gov.au
+  hostname: search.data.gov.au
   ipName: search-data-gov-au-ingress
   ingressClass: gce
   enableTls: true
