Made connector build.

--- a/magda-dap-connector/package.json
+++ b/magda-dap-connector/package.json
@@ -49,5 +49,11 @@
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000"
+  },
+  "magda": {
+    "language": "typescript",
+    "categories": {
+      "connector": true
+    }
   }
 }
