--- a/magda-dap-connector/tsconfig.json
+++ b/magda-dap-connector/tsconfig.json
@@ -4,10 +4,10 @@
         "baseUrl": ".",
         "paths": {
             "@magda/registry-aspects/dist/*": [
-                "./node_modules/@magda/registry-aspects/src/*"
+                "../node_modules/@magda/registry-aspects/src/*"
             ],
             "@magda/typescript-common/dist/*": [
-                "./node_modules/@magda/typescript-common/src/*"
+                "../node_modules/@magda/typescript-common/src/*"
             ]
         }
     }
