--- a/magda-indexer/src/main/resources/application.conf
+++ b/magda-indexer/src/main/resources/application.conf
@@ -10,7 +10,7 @@ http {
 akka {
     # set this on to debug logging system itself
     # useful when you not sure which config is loaded
-    log-config-on-start = off
+    log-config-on-start = on
     loggers = ["akka.event.Logging$DefaultLogger"]
     # have to set this in order make sure logs are filtered using xml config before enter log bus
     logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
