--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -20,11 +20,14 @@ gateway:
   service:
     type: LoadBalancer
   loadBalancerIP: "104.199.180.124"
-  cspReportUri: https://sdga.report-uri.com/r/d/csp/enforce
   enableAuthEndpoint: true
   auth:
     facebookClientId: "173073926555600"
     googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
+  cors:
+    credentials: true
+  helmet:
+    frameguard: false
   resources:
     requests:
       cpu: 50m
