--- a/deploy/helm/magda/charts/gateway/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/configmap.yaml
@@ -1,36 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "gateway-routes"
+  name: "gateway-config"
   labels:
     pod: "gateway"
 data:
   # When the config map is mounted as a volume, these will be created as files.
-  routes.json: '{
-    "search": {
-        "to": "http://search-api/v0"
-    },
-    "registry": {
-        "to": "http://registry-api/v0",
-        "auth": true
-    },
-    "auth": {
-        "to": "http://authorization-api/v0/public",
-        "methods": ["GET"],
-        "auth": true
-    },
-    "discussions": {
-        "to": "http://discussions-api/v0",
-        "auth": true
-    },
-    "admin": {
-        "to": "http://admin-api/v0",
-        "auth": true
-    },
-    "feedback": {
-        "to": "http://feedback-api/v0"
-    },
-    "correspondence": {
-        "to": "http://correspondence-api/v0/public"
-    }
-  }'
+  routes.json: '{{ toJson .Values.routes | indent 2 }}'
+  helmet.json: '{{ toJson .Values.helmet | indent 2 }}'
+  cors.json: '{{ toJson .Values.cors | indent 2 }}'
+  csp.json: '{{ toJson .Values.csp | indent 2 }}'
+  
