--- a/deploy/helm/search-data-gov-au.yml
+++ b/deploy/helm/search-data-gov-au.yml
@@ -61,10 +61,17 @@ gateway:
     autoscaler:
         minReplicas: 2
         maxReplicas: 4
-    cspReportUri: https://sdga.report-uri.com/r/d/csp/enforce
     auth:
         facebookClientId: "173073926555600"
         googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
+    csp:
+        directives:
+            reportUri: https://sdga.report-uri.com/r/d/csp/enforce
+    helmet:
+        hsts:
+            maxAge: 31536000
+            includeSubdomains: true
+            preload: true
     resources:
         requests:
             cpu: 100m
