--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/gateway",
   "description": "The public gateway to all of MAGDA, including the API and web front end.",
-  "version": "0.0.44-0",
+  "version": "0.0.45-0",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -14,9 +14,10 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.44-0",
+    "@magda/typescript-common": "^0.0.45-0",
     "body-parser": "^1.13.2",
     "cheerio": "^0.22.0",
+    "compression": "^1.7.2",
     "connect-ensure-login": "^0.1.1",
     "connect-pg-simple": "^4.2.0",
     "cookie-parser": "^1.3.5",
@@ -24,8 +25,8 @@
     "ejs": "^2.3.3",
     "express": "^4.15.3",
     "express-session": "^1.11.3",
-    "helmet": "^3.12.0",
     "gravatar": "^1.6.0",
+    "helmet": "^3.12.0",
     "http-proxy": "^1.16.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^1.0.0",
@@ -40,11 +41,11 @@
     "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
-    "yargs": "^8.0.2",
-    "compression": "^1.7.2"
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.44-0",
+    "@magda/scripts": "^0.0.45-0",
+    "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.1",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.37",
@@ -57,7 +58,6 @@
     "@types/pg": "^6.1.41",
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^8.0.2",
-    "@types/compression": "^0.0.36",
     "typescript": "~2.5.0"
   },
   "config": {
