--- a/magda-project-open-data-connector/package.json
+++ b/magda-project-open-data-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/project-open-data-connector",
   "description": "MAGDA Project Open Data (data.json) Connector",
-  "version": "0.0.42-RC1",
+  "version": "0.0.42",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -16,7 +16,7 @@
     "retag-and-push": "retag-and-push"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.42-RC1",
+    "@magda/scripts": "^0.0.42",
     "@types/node": "^8.0.14",
     "@types/request": "^2.0.0",
     "@types/urijs": "^1.15.34",
@@ -26,8 +26,8 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "@magda/registry-aspects": "^0.0.42-RC1",
-    "@magda/typescript-common": "^0.0.42-RC1",
+    "@magda/registry-aspects": "^0.0.42",
+    "@magda/typescript-common": "^0.0.42",
     "moment": "^2.17.1",
     "request": "^2.79.0",
     "urijs": "^1.18.12",
