--- a/magda-sleuther-linked-data-rating/package.json
+++ b/magda-sleuther-linked-data-rating/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/sleuther-linked-data-rating",
   "description": "MAGDA Linked Data Rating Sleuther",
-  "version": "0.0.42-RC1",
+  "version": "0.0.42",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -16,7 +16,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.42-RC1",
+    "@magda/scripts": "^0.0.42",
     "@types/chai": "^4.0.4",
     "@types/lodash": "^4.14.74",
     "@types/mocha": "^2.2.42",
@@ -31,9 +31,9 @@
     "typescript": "~2.5.0"
   },
   "dependencies": {
-    "@magda/registry-aspects": "^0.0.42-RC1",
-    "@magda/sleuther-framework": "^0.0.42-RC1",
-    "@magda/typescript-common": "^0.0.42-RC1",
+    "@magda/registry-aspects": "^0.0.42",
+    "@magda/sleuther-framework": "^0.0.42",
+    "@magda/typescript-common": "^0.0.42",
     "lodash": "^4.17.4"
   },
   "config": {
