--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -11,7 +11,8 @@
     "dev": "run-typescript-in-nodemon src/index.ts --ckanUrl https://data.gov.au",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
-    "retag-and-push": "retag-and-push"
+    "retag-and-push": "retag-and-push",
+    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.45-0",
@@ -23,6 +24,7 @@
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.3",
     "ejs": "^2.3.3",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.15.3",
     "express-session": "^1.11.3",
     "gravatar": "^1.6.0",
@@ -45,19 +47,31 @@
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.45-0",
+    "@types/chai": "^4.0.1",
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.1",
     "@types/ejs": "^2.3.33",
+    "@types/escape-string-regexp": "1.0.0",
     "@types/express": "^4.0.37",
     "@types/http-proxy": "^1.16.0",
     "@types/lodash": "^4.14.74",
+    "@types/mocha": "^2.2.41",
+    "@types/nock": "^8.2.1",
     "@types/node": "^8.0.14",
     "@types/passport": "^0.4.5",
     "@types/passport-facebook": "^2.1.8",
     "@types/passport-local": "^1.0.31",
     "@types/pg": "^6.1.41",
+    "@types/request": "2.47.0",
+    "@types/sinon": "^2.3.3",
+    "@types/supertest": "^2.0.2",
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^8.0.2",
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
+    "nock": "^9.0.14",
+    "sinon": "^2.4.1",
+    "supertest": "^3.0.0",
     "typescript": "~2.5.0"
   },
   "config": {
