--- a/magda-migrator-discussions-db/package.json
+++ b/magda-migrator-discussions-db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/migrator-discussions-db",
-  "version": "0.0.44",
+  "version": "0.0.44-RC1",
   "description": "Magda auth's PostgreSQL database.",
   "scripts": {
     "dev": "echo \"No dev mode available, use helm instead.\"",
@@ -17,8 +17,8 @@
     }
   },
   "devDependencies": {
-    "@magda/db-migrator": "^0.0.44",
-    "@magda/scripts": "^0.0.44"
+    "@magda/db-migrator": "^0.0.44-RC1",
+    "@magda/scripts": "^0.0.44-RC1"
   },
   "magda": {
     "categories": {
