- Remove registry URL parameter; it can be found from route - Add dgaRedirectionDomain parameter to deploy config file

--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -26,6 +26,7 @@ gateway:
   autoscaler:
     enabled: false
   enableAuthEndpoint: true
+  dgaRedirectionDomain: "ckan.data.gov.au"
 combined-db:
   resources:
     requests:
