--- a/magda-feedback-api/package.json
+++ b/magda-feedback-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/feedback-api",
-  "version": "0.0.43-RC1",
+  "version": "0.0.43",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -24,7 +24,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.43-RC1",
+    "@magda/scripts": "^0.0.43",
     "@types/chai": "^4.0.4",
     "@types/config": "0.0.32",
     "@types/express": "^4.0.35",
