Resolves #1397 - initial crack at api documentation

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -13,6 +13,11 @@ tags:
   sleuther-visualization: true
   sleuther-format: true
 
+apidocs-server:
+  resources:
+    requests:
+      cpu: 100m
+      memory: 0
 ingress:
   hostname: dev.magda.io
   ingressClass: nginx
