--- a/deploy/helm/magda/requirements.yaml
+++ b/deploy/helm/magda/requirements.yaml
@@ -1,4 +1,9 @@
 dependencies:
+  - name: apidocs-server
+    version: 0.1.0
+    tags:
+      - all
+      - apidocs-server
   - name: authorization-api
     version: 0.1.0
     tags:
@@ -105,4 +110,3 @@ dependencies:
     version: 0.1.0
     tags:
       - ingress
-
