--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,9 +9,11 @@
     "generate-connector-jobs": "generate-connector-jobs.js",
     "run-typescript-in-nodemon": "run-typescript-in-nodemon.js",
     "create-pod-and-forward": "create-pod-and-forward.js",
-    "retag-and-push": "retag-and-push.js"
+    "retag-and-push": "retag-and-push.js",
+    "generate-api-documentation": "generate-api-documentation.js"
   },
   "devDependencies": {
+    "apidoc": "^0.17.6",
     "fs-extra": "^2.1.2",
     "klaw-sync": "^2.1.0",
     "lodash": "^4.17.5",
