--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -6,5 +6,6 @@ data:
   # When the config map is mounted as a volume, these will be created as files.
   web.json: '{
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
-    "baseUrl": {{ .Values.baseUrl | default "/" | quote }}
+    "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
+    "showFallbackBanner": {{ .Values.showFallbackBanner | default "true" }},
   }'
