--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -20,7 +20,7 @@ gateway:
   service:
     type: LoadBalancer
   loadBalancerIP: "104.199.180.124"
-  dgaRedirectionDomain: "ckan.data.gov.au"
+  ckanRedirectionDomain: "ckan.data.gov.au"
   enableAuthEndpoint: true
   auth:
     facebookClientId: "173073926555600"
