--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -26,7 +26,7 @@ gateway:
   autoscaler:
     enabled: false
   enableAuthEndpoint: true
-  dgaRedirectionDomain: "ckan.data.gov.au"
+  ckanRedirectionDomain: "ckan.data.gov.au"
 combined-db:
   resources:
     requests:
