--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -7,5 +7,5 @@ data:
   web.json: '{
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
     "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
-    "showFallbackBanner": {{ .Values.showFallbackBanner | default "true" }},
+    "showFallbackBanner": {{ .Values.showFallbackBanner }}
   }'
