--- a/deploy/helm/magda/Chart.yaml
+++ b/deploy/helm/magda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 description: "Next generation search and discovery for open data portals."
 name: "magda"
-version: "0.0.45-0"
+version: "0.0.45-RC1"
 home: "https://github.com/TerriaJS/magda"
 sources: ["https://github.com/TerriaJS/magda"]
