--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -45,6 +45,8 @@ routes:
     auth: true
   feedback:
     to: http://feedback-api/v0
+  contents:
+    to: http://contents-api/v0
   correspondence:
     to: http://correspondence-api/v0/public
   apidocs:
