--- a/deploy/helm/magda/requirements.yaml
+++ b/deploy/helm/magda/requirements.yaml
@@ -19,6 +19,16 @@ dependencies:
     tags:
       - all
       - combined-db
+  - name: contents-api
+    version: 0.1.0
+    tags:
+      - all
+      - contents-api
+  - name: contents-db
+    version: 0.1.0
+    tags:
+      - all
+      - contents-db
   - name: elasticsearch
     version: 0.1.0
     tags:
