--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -17,6 +17,8 @@ tags:
   authorization-api: false
   authorization-db: false
   combined-db: false
+  cont-api: false
+  contents-db: false
   discussions-api: false
   discussions-db: false
   elasticsearch: false
