--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -8,7 +8,7 @@
     "compile": "tsc -p tsconfig-build.json",
     "watch": "tsc -p tsconfig-build.json --watch",
     "start": "node dist/index.js",
-    "dev": "run-typescript-in-nodemon src/index.ts",
+    "dev": "run-typescript-in-nodemon src/index.ts --baseExternalUrl=http://localhost:6107/",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push",
