--- a/scripts/package.json
+++ b/scripts/package.json
@@ -13,22 +13,26 @@
     "create-secrets": "create-secrets/index.js"
   },
   "devDependencies": {
+    "ansi-styles": "^3.2.1",
+    "chalk": "^2.4.1",
+    "clear": "^0.1.0",
+    "commander": "^2.17.0",
+    "configstore": "^4.0.0",
     "fs-extra": "^2.1.2",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.0.0",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "klaw-sync": "^2.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.19.4",
     "nodemon": "^1.11.0",
+    "strip-ansi": "^4.0.0",
     "tmp": "0.0.31",
     "toposort": "^1.0.6",
     "ts-node": "^3.0.4",
     "tsconfig-paths": "^2.2.0",
     "typescript": "~2.5.0",
-    "yargs": "^8.0.1",
-    "chalk": "^2.4.1",
-    "clear": "^0.1.0",
-    "commander": "^2.17.0",
-    "configstore": "^4.0.0",
-    "inquirer": "^6.0.0"
+    "yargs": "^8.0.1"
   },
   "magda": {
     "language": "javascript",
