Altered the docker configuration to make it all work in k8s.

--- a/magda-apidocs-server/default.conf
+++ b/magda-apidocs-server/default.conf
@@ -1,6 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
+    add_header Content-Security-Policy "default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';";
 
     location / {
         root   /usr/share/nginx/html;
