--- a/scripts/package.json
+++ b/scripts/package.json
@@ -22,10 +22,12 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.0.0",
     "inquirer-autocomplete-prompt": "^1.0.1",
+    "js-base64": "^2.4.8",
     "klaw-sync": "^2.1.0",
     "lodash": "^4.17.5",
     "moment": "^2.19.4",
     "nodemon": "^1.11.0",
+    "pwgen": "^0.1.6",
     "strip-ansi": "^4.0.0",
     "tmp": "0.0.31",
     "toposort": "^1.0.6",
