Removed default fallbackUrl

--- a/deploy/helm/search-data-gov-au.yml
+++ b/deploy/helm/search-data-gov-au.yml
@@ -115,6 +115,7 @@ web-server:
             cpu: 100m
             memory: 100Mi
     disableAuthenticationFeatures: true
+    fallbackUrl: "https://data.gov.au"
 sleuther-broken-link:
     resources:
         requests:
