--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -90,6 +90,7 @@ search-api:
       cpu: 100m
       memory: 0
 web-server:
+  fallbackUrl: "https://data.gov.au"
   resources:
     requests:
       cpu: 100m
