--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -49,3 +49,5 @@ correspondence-api:
   smtpPort: 2525
   defaultRecipient: "alex.gilleran+magda@csiro.it"
   smtpHostname: "smtp.mailgun.org"
+web-server:
+  fallbackUrl: "https://data.gov.au"
