--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   # When the config map is mounted as a volume, these will be created as files.
   web.json: '{
+    {{- if .Values.fallbackUrl -}} "fallbackUrl": {{ .Values.fallbackUrl | quote }}, {{- end -}}
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
-    "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
-    "fallbackUrl": {{ .Values.fallbackUrl | quote }}
+    "baseUrl": {{ .Values.baseUrl | default "/" | quote }}
   }'
