--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/admin-api",
-  "version": "0.0.44-RC1",
+  "version": "0.0.44",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -12,7 +12,7 @@
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.44-RC1",
+    "@magda/typescript-common": "^0.0.44",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "http-proxy": "^1.16.2",
@@ -23,7 +23,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.44-RC1",
+    "@magda/scripts": "^0.0.44",
     "@types/chai": "^4.0.4",
     "@types/config": "0.0.32",
     "@types/express": "^4.0.35",
