--- a/deploy/helm/magda/Chart.yaml
+++ b/deploy/helm/magda/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-description: "Next generation search and discovery for open data portals."
 name: "magda"
+description: "A complete solution for managing, publishing and discovering government data, private and open."
 version: "0.0.46-0"
-home: "https://github.com/TerriaJS/magda"
-sources: ["https://github.com/TerriaJS/magda"]
+home: "https://magda.io"
+sources: ["https://github.com/magda-io/magda"]
