--- a/deploy/helm/magda/charts/content-api/templates/service.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: contents-api
+  name: content-api
 spec:
   ports:
   - name: http
@@ -12,4 +12,4 @@ spec:
   type: NodePort
 {{- end }}
   selector:
-    service: contents-api
+    service: content-api
