--- a/deploy/helm/magda/charts/content-db/templates/migration.yaml
+++ b/deploy/helm/magda/charts/content-db/templates/migration.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: contents-db-migrator
+  name: content-db-migrator
   labels:
   annotations:
     "helm.sh/hook": post-install,post-upgrade
@@ -10,14 +10,14 @@ metadata:
 spec:
   template:
     metadata:
-      name: "contents-db-migrator"
+      name: "content-db-migrator"
     spec:
       restartPolicy: OnFailure
       containers:
-      - name: contents-db-migrator
-        image: "{{ .Values.image.repository | default .Values.global.image.repository }}/magda-migrator-contents-db:{{ .Values.image.tag | default .Values.global.image.tag }}"
+      - name: content-db-migrator
+        image: "{{ .Values.image.repository | default .Values.global.image.repository }}/magda-migrator-content-db:{{ .Values.image.tag | default .Values.global.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | default .Values.global.image.pullPolicy }}
         env:
         - name: DB_HOST
-          value: contents-db
+          value: content-db
         {{- template "magda.postgres-migrator-env" . }}
