--- a/deploy/helm/magda/requirements.yaml
+++ b/deploy/helm/magda/requirements.yaml
@@ -19,16 +19,16 @@ dependencies:
     tags:
       - all
       - combined-db
-  - name: contents-api
+  - name: content-api
     version: 0.1.0
     tags:
       - all
-      - contents-api
-  - name: contents-db
+      - content-api
+  - name: content-db
     version: 0.1.0
     tags:
       - all
-      - contents-db
+      - content-db
   - name: elasticsearch
     version: 0.1.0
     tags:
