--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -18,8 +18,8 @@ tags:
   authorization-api: false
   authorization-db: false
   combined-db: false
-  contents-api: false
-  contents-db: false
+  content-api: false
+  content-db: false
   discussions-api: false
   discussions-db: false
   elasticsearch: false
