--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -129,6 +129,11 @@ authorization-api:
     requests:
       cpu: 100m
       memory: 0
+content-api:
+  resources:
+    requests:
+      cpu: 100m
+      memory: 0
 discussions-api:
   resources:
     requests:
