--- a/deploy/helm/search-data-gov-au.yml
+++ b/deploy/helm/search-data-gov-au.yml
@@ -11,8 +11,8 @@ tags:
 
     authorization-api: true
     authorization-db: true
-    contents-db: true
-    contents-api: true
+    content-db: true
+    content-api: true
     elasticsearch: true
     gateway: true
     indexer: true
