--- a/magda-scala-common/package.json
+++ b/magda-scala-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/scala-common",
-  "version": "0.0.46-0",
+  "version": "0.0.46-RC1",
   "description": "Common Scala code shared between components.",
   "scripts": {
     "test": "cd .. && sbt common/test",
