--- a/magda-builder-docker/package.json
+++ b/magda-builder-docker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/builder-docker",
-  "version": "0.0.45-RC1",
+  "version": "0.0.45",
   "description": "Builder image for nodejs magda projects",
   "scripts": {
     "docker-build-prod": "create-docker-context-for-node-component --build --push",
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "@magda/builder-nodejs": "^0.0.45-RC1",
-    "@magda/scripts": "^0.0.45-RC1"
+    "@magda/builder-nodejs": "^0.0.45",
+    "@magda/scripts": "^0.0.45"
   },
   "magda": {
     "categories": {
