--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/web-server",
   "description": "The server that serves the MAGDA web front end.",
-  "version": "0.0.45-RC1",
+  "version": "0.0.45",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -15,7 +15,7 @@
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.45-RC1",
+    "@magda/scripts": "^0.0.45",
     "@types/chai": "^4.0.1",
     "@types/config": "0.0.32",
     "@types/express": "^4.0.39",
@@ -40,8 +40,8 @@
     "xml2js": "^0.4.19"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.45-RC1",
-    "@magda/web-client": "^0.0.45-RC1",
+    "@magda/typescript-common": "^0.0.45",
+    "@magda/web-client": "^0.0.45",
     "express": "^4.15.3",
     "morgan": "^1.9.0",
     "request": "2.85.0",
