Halfway through moving resource defaults into their charts.

--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -7,16 +7,9 @@ autoscaler:
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 80
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+resources:
+  requests:
+    cpu: 10m
+    memory: 30Mi
 disableAuthenticationFeatures: false
 service: {}
